--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -1,93 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainMenu"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".MainMenu">
 
     <androidx.cardview.widget.CardView
-        android:layout_margin="10dp"
-        android:elevation="10dp"
-        app:cardElevation="10dp"
+        android:id="@+id/menu1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="180dp"
+        android:layout_margin="20dp"
+        android:layout_marginBottom="1dp"
+        app:cardElevation="30dp"
+        app:contentPadding="10dp">
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/ivprofile"
-                android:src="@mipmap/foto"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-            <LinearLayout
-                android:layout_margin="10dp"
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:textColor="#FF00FF"
-                    android:textStyle="bold"
-                    android:text="Nama"
-                    android:id="@+id/Nama"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:id="@+id/articleName"
+                    style="@android:style/TextAppearance.Medium"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:elevation="3dp"
+                    android:ellipsize="marquee"
+                    android:focusable="true"
+                    android:marqueeRepeatLimit="marquee_forever"
+                    android:padding="10dp"
+                    android:singleLine="true"
+                    android:text="Lihat Product"
+                    android:textColor="#000000"
+                    tools:targetApi="lollipop" />
 
-                <TextView
-                    android:text="Deskripsi"
-                    android:id="@+id/Deskripsi"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-            </LinearLayout>
+            </RelativeLayout>
 
         </LinearLayout>
+
     </androidx.cardview.widget.CardView>
+
+
     <androidx.cardview.widget.CardView
-        android:layout_margin="10dp"
-        android:elevation="10dp"
-        app:cardElevation="10dp"
+        android:id="@+id/menu2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="180dp"
+        android:layout_margin="20dp"
+        android:layout_marginBottom="1dp"
+        app:cardElevation="30dp"
+        app:contentPadding="10dp">
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/ivprofile2"
-                android:src="@mipmap/foto"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-            <LinearLayout
-                android:layout_margin="10dp"
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:textColor="#FF00FF"
-                    android:textStyle="bold"
-                    android:text="Nama"
-                    android:id="@+id/Nama2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    style="@android:style/TextAppearance.Medium"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:elevation="3dp"
+                    android:ellipsize="marquee"
+                    android:focusable="true"
+                    android:marqueeRepeatLimit="marquee_forever"
+                    android:padding="10dp"
+                    android:singleLine="true"
+                    android:text="Lihat Product Favouriteku"
+                    android:textColor="#000000"
+                    tools:targetApi="lollipop" />
 
-                <TextView
-                    android:text="Deskripsi"
-                    android:id="@+id/Deskripsi2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-            </LinearLayout>
+            </RelativeLayout>
 
         </LinearLayout>
+
     </androidx.cardview.widget.CardView>
+
 </LinearLayout>
